# ticket-system

./: .dockerignore  .env.example  .flake8  README.md  docker-compose.yaml  gray.conf  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: ticket-system_workflow.yaml
app/: Dockerfile  app.py  db_crud.py  db_models.py  db_schemas.py  handlers.py  helpers.py  tests.py  utils.py  views.py
